--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "utility"
   ],
   "author": "Bruno Almeida Kotesky",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BrunoAlmeidaKotesky/bakutils-types"
+  }
 }
